# SupercellCompression

./: .gitignore  CMakeLists.txt  xmake.lua
cli/: compress.h  console.h  decompress.h  image_convert.h  main.cpp  options.h
include/SupercellCompression/: Astc.h  KhronosTexture.h  Lzham.h  Lzma.h  ScCompression.h
include/SupercellCompression/Astc/: Compressor.h  Decompressor.h
include/SupercellCompression/Lzham/: Compressor.h  Decompressor.h
include/SupercellCompression/Lzma/: Compressor.h  Decompressor.h
include/SupercellCompression/Zstd/: Compressor.h  Decompressor.h
include/SupercellCompression/interface/: CompressionInterface.h  DecompressionInterface.h  ImageCompressionInterface.h  ImageDecompressionInterface.h
source/: SupercellCompression.cpp
source/Astc/: Compressor.cpp  Decompressor.cpp
test/: CMakeLists.txt
test/source/: main.cpp
